public/stylesheets/main.css
/* @override http://localhost/stylesheets/main.css */

@import url('layout.css');

/* Generic styles -- this section contains style information for generic elements. Generally speaking, we should be
 * careful about modifying elements directly. However, these are based on the YUI reset that has already been loaded
 * when this style sheet is loaded.
 */
em {
    font-weight: bold;
}

ul li {
    display: list-item;
    list-style: disc outside;
    margin-left: 35px;
    text-align: left;
}

ol li {
    display: list-item;
    list-style: decimal outside;
    margin-left: 35px;
    text-align: left;
}

p {
    margin: 10px 8px;
}

h1 {
    font-size: large;
    font-weight: bold;
}

/* This next section contains application-specific styles. Each style should
   be named for what it *does*, and not what it *looks like*. This standard
   improves application maintenance. */

/* Create some space around the body content */
body {
	padding: 10px;
	text-align: left;
}

/* The logo is floated to the left */
div#logo {
    float: left;
    margin-bottom: 10px;
}

/* The logout form is floated to the right and 
   moved down a bit from the corner. */
div#logout {
    float: right;
    text-align: right;
    margin-top: 10px;
}

div#logout p {
    margin-top: 8px;
}

/* Styling for the menubar. The min-height reserves the space required for the menubar while it loads. */
div#menubar {
    clear: both;
    font-weight: bold;
    min-height: 25px;
    background-color: #d3d3d3;
}

/* This class is used to mark elements which should only be applied when data is transferred to 
   external media, such as a print out. By default, these items are hidden. @see print.css */
div.externalMediaMarking {
    display: none;
}

/* The content area is the middle of the page in between the header and the footer */
div#content {
	margin: 10px 0px;
}

/* Sections are used to divide long pages up into separate and distinct content blocks. */
div.sectionHeader {
	margin-top: 10px;
    padding: 3px 8px;
    background-color: #416ed7;
    color: #fff;
    border: 1px solid #416ed7;
    border-bottom: none;
    font-weight: bold;
    text-align: left;
}

div.sectionHeader a {
    color: white;
}

div.section {
    border: 1px solid #d3d3d3;
    background-color: #ffffff;
    border-top: none;
    padding: 10px;
    position: relative;
    height: 100%;
    margin-bottom: 10px;
}

/* Panels are a subdivision of the sections */
div.panel {
    border: 1px solid #d3d3d3;
    margin-bottom: 10px;
    padding: 10px;
}

/* 
These definitions provide an easy method for creating columns.
For example, two columns can be arranged like this:
<div class="column left"></div> 
<div class="column right"></div>
<div class="clear"></div>
*/
div.column {
	width: 49%;
	margin-bottom: 0px;
}

div.left {
    float: left;
}

div.right {
    float: right;
}

div.clear {
    clear: both;
}

/* Used to display a stacktrace. Traces might be long so the paragraph needs to be able to scroll horizontally. */
p.stacktrace {
    margin: 10px;
    border: 1px solid #d3d3d3;
    #ffffff-space: pre;
    font-family: monospace;
    overflow: auto;
    white-space: pre-wrap;
}

/* Provide some whitespace at the bottom of the page. */
div#footer {
    margin: 10px 0px;
    background-color: #efefef;
    border: 1px solid #cecece;
    padding: 3px;
}

/* The footer links are aligned in the bottom-right corner */
div#footerLinks {
    float: right;
}

/* Used to display search criteria & filters at the top of various pages */
table.searchFilters {
    background-color: #ebebeb;
    margin: 10px auto;
    border: 1px solid #cecece;
    padding: 10px 10px;
}

table.searchFilters td {
    padding: 3px 8px;
    font-weight: bold;
}

table.searchFilters td a {
    font-weight: normal;
}

/* This table is used to display key-value pairs, such as on the remediation
   detail page. */
table.keyValues td {
    padding: 2px 5px;
    vertical-align: top;
}

/* The first column in a keyValues table is bold text */
table.keyValues td:first-child {
    font-weight: bold;
    text-align: right;
}

/* This style is used for displaying audit log tables. */
table.auditLog {
	width: 100%;
    background-color: #ffffff;
}

table.auditLog th {
    font-weight: bold;
}

table.auditLog th, table.auditLog td {
	border: 1px solid #cecece;
	padding: 3px;
}

/* A container for holding a row of buttons */
div.toolbar {
    margin-bottom: 10px;
}

/* This style is used to create a field which is editable on the finding detail page. It displays an edit icon (a
 * pencil) and the element which uses this class should also set a target attribute which contains the id of the
 * element which needs to become editable.
 */
.editable {
    background: url(/images/edit.png) no-repeat top right;
    padding-right: 20px;
    margin-right: 10px;
    cursor: pointer;
}

/* These styles are used on the remediation detail page to indicate approval status and comments */
div.approval {
    background-color: #efefef;
    border: 1px solid #cecece;
    padding: 3px;
    margin-bottom: 10px;
}

div.approvalHeader {
    background-color: #cecece;
    border: 1px solid #cecece;
    padding: 3px 8px;
}

div.approval b {
    margin-right: 10px;
}

div.approval span.approved {
    background-color: lightGreen;
    padding: 3px;
}

div.approval span.denied {
    background-color: #ffcccc;
    padding: 3px;
}

/* This is the standard style for the basic CRUD forms such as users, systems,
   finding sources, etc.
*/
div.form {

}

div.formValue {
    background-color: #ffffff;
    border: 1px solid #bebebe;
    padding: 5px;
    color: black;
    font-weight: normal;
}

div.subform {
    margin: 15px 0px;
}

table.fisma_crud {
    margin: 0px 15px;
    background-color: #e3e3e3;
    border: 1px solid #bebebe;
}

table.fisma_crud tr td {
    font-family: 'Verdana', 'Arial', 'Helvetica';
    color: #44637a;
    font-weight: bold;
    font-size: 12px;
    padding: 3px 5px;
}

table.fisma_crud tr td:first-child {
    text-align: right;
}


table.fisma_crud tr.fisma_checkboxes td {
    text-align: left;
}

/* This is used for Rules of Behavior, Privacy Policy, etc. */
div.notice p {
    text-align:left;
    padding: 5px 20px;
}

/* This is the style for highlight the search keyword. */
.highlight {
    background-color: yellow;
}

#help_tips{
    cursor:help;
    position:relative;
    top:4px;
}

/* add bgcolor to all row */
tr.alt td { 
    background:#ecf6fc;
}
    
/* add bgcolor when mouseover */
tr.over td { 
    background:#bcd4ec;
} 

/* The notice styles are used for things like the privacy policy, rules of behavior, etc. Sometimes these items
 * are presented outside of any main layout, so they need to be able to stand on their own.
 */
.notice {
    font-size: 12px;
    width: 60%;
    margin: 2em auto;
    border: 1px solid #bebebe;
    padding-bottom: 5px;
    text-align: center;
}

.notice p {
    padding: 0px 5px;
}

.notice h1 {
    text-align: left;
    padding: 5px 5px;
    color: #44637a;
    background-color: #dddddd;
    line-height: 23px;
    font-weight: bold;
    margin-top: 0;
}

/* The message bar is used to present feedback on user actions, such as indications
 * of success or failure. 
 */
div#msgbar {
    border: 1px solid red;
    background-color: pink;
    margin-top: 10px;
    text-align: center;
    padding: 3px;
    display: none;
}

/* This style adds a loading graphic to the YUI tab view */
.yui-navset div.loading div {
    background:url(/yui/assets/skins/sam/ajax-loader.gif) no-repeat center center;
    height:8em; /* hold some space while loading */
}

